--- a/company-rules-template/styles.css
+++ b/company-rules-template/styles.css
@@ -301,6 +301,7 @@ body {
   display: block;
   fill: rgba(55, 53, 47, 0.45);
   flex-shrink: 0;
+  /* transform: rotate(180deg); */
 }
 
 /* END SWITCHER */
@@ -315,6 +316,102 @@ body {
   width: 100%;
   overflow: hidden;
 }
+
+/* Header */
+
+.header {
+  display: block;
+  background: white;
+  max-width: 100vw;
+  z-index: 100;
+  user-select: none;
+}
+
+.topbar {
+  position: relative;
+  cursor: default;
+  width: 100%;
+  max-width: 100vw;
+  height: 45px;
+  opacity: 1;
+  transition: opacity 700ms ease 0s, color 700ms ease 0s;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+  height: 45px;
+  padding-left: 12px;
+  padding-right: 10px;
+}
+
+/* fadein-icon */
+.header-switcher-fadein-icon {
+  flex-shrink: 0;
+  width: 48px;
+  height: 48px;
+  margin: -12px -6px -12px -12px;
+  padding: 12px;
+  cursor: pointer;
+}
+
+.header-switcher-icons-container {
+  position: relative;
+  display: none;
+}
+
+/* Hanburger */
+.header-switcher-icon-hamburger {
+  user-select: none; 
+  transition: opacity 270ms ease 0s; 
+  cursor: pointer; 
+  position: absolute; 
+  top: 0px; 
+  left: 0px; 
+  will-change: opacity; 
+  display: flex;
+  align-items: center; 
+  justify-content: center; 
+  width: 24px; 
+  height: 24px; 
+  border-radius: 4px; 
+  opacity: 1;
+}
+
+.header-switcher-icon-svg {
+  width: 16px;
+  height: 16px;
+  display: block;
+  fill: rgba(55, 53, 47, 0.85);
+  flex-shrink: 0;
+}
+
+/* Open */
+.header-switcher-icon-open {
+  user-select: none;
+  transition: opacity 270ms ease 0s;
+  cursor: pointer;
+  display: none; /* inline-flex;*/
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  border-radius: 4px;
+  height: 24px;
+  width: 24px;
+  padding: 0px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  will-change: opacity;
+}
+
+/* .header-switcher-icon-open:hover {
+  opacity: 1;
+  background: rgba(55, 53, 47, 0.08);
+} */
+
 
 /* ----------------- */
 /* ---- OVERLAY ---- */
